package ejercicio4;

public interface GestorMovimientosInt {
    boolean validarMovimiento();
    void realizarMovimiento(Tablero tablero, Movimiento movimiento);

}
