package ejercicio4;

public interface ValidadorMovimientosInt {
    public boolean validarMovimiento(Movimiento movimiento, Tablero tablero);
}
